ui. Search colors and layout improvments
Add ColorResources.xaml
IHierarchicalCheckableToBackground noCheckedChildBrush is transparent

--- a/Diagnosis.App/Controls/Search/HrSearchResult.xaml
+++ b/Diagnosis.App/Controls/Search/HrSearchResult.xaml
@@ -31,7 +31,8 @@
                                                     <Binding />
                                                 </MultiBinding>
                                             </DataTrigger.Binding>
-                                            <Setter Property="Background" Value="Yellow" />
+                                            <Setter Property="Background" Value="{StaticResource searchHighlightBackgroundBrush}" />
+                                            <Setter Property="Foreground" Value="{StaticResource searchHighlightForegroundBrush}" />
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
