--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -7,6 +7,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ConverterResources.xaml" />
                 <ResourceDictionary Source="Resources/ImageResources.xaml" />
+                <ResourceDictionary Source="Resources/ColorResources.xaml" />
                 <ResourceDictionary Source="Styles/SharedStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
