--- a/Diagnosis.App/Controls/Common/UndoOverlay.xaml
+++ b/Diagnosis.App/Controls/Common/UndoOverlay.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              MinWidth="200" MaxWidth="300">
-    <Border Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" BorderThickness="3" CornerRadius="10">
+    <Border Background="{StaticResource overlayBackgroundBrush}" BorderBrush="{StaticResource overlayBorderBrush}" BorderThickness="3" CornerRadius="10" >
         <DockPanel Margin="5">
             <TextBlock TextWrapping="Wrap" Margin="0,0,30,0">
                 <Run Text="{Binding Message, Mode=OneWay}" />.
