--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
+             d:DesignHeight="300" d:DesignWidth="300">
     <!--LoginViewModel-->
     <UserControl.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource label90}" />
