--- a/Diagnosis.App/Screens/NewCard.xaml
+++ b/Diagnosis.App/Screens/NewCard.xaml
@@ -64,17 +64,12 @@
             <card:AppointmentsTabs DataContext="{Binding Course}"
                                Visibility="{Binding Patient.NoCourses, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
             <!--<card:Appointment DataContext="{Binding Appointment}" Grid.Row="1" />-->
-            <Border Grid.Row="2" BorderThickness="0,1,0,0" SnapsToDevicePixels="True"
+            <Border Grid.Row="2" BorderThickness="0,1,0,0" SnapsToDevicePixels="True"                    
+                    Background="{StaticResource hrEditorBackgroundBrush}"
                 Visibility="{Binding HrEditor.IsActive, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Border.BorderBrush>
                     <SolidColorBrush Color="Gray" />
                 </Border.BorderBrush>
-                <Border.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FFFFEAD2" Offset="0" />
-                        <GradientStop Color="#FFFFFBFB" Offset="1" />
-                    </LinearGradientBrush>
-                </Border.Background>
 
                 <Grid Margin="10,0,10,10">
                     <editors:HealthRecordEditorShared DataContext="{Binding HrEditor}" />
