--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -164,8 +164,8 @@
             </StackPanel>
         </Expander>
 
-        <TreeView
-            x:Name="tree" Grid.Row="2" Margin="0,0,0,10"
+        <TreeView BorderThickness="0"
+            x:Name="tree" Grid.Row="2" Margin="5,5,5,10"
             Style="{StaticResource TreeViewStyle}"
             Visibility="{Binding Results.Count, Converter={StaticResource CountToVisibility}}"
             ItemsSource="{Binding Results}">
