--- a/Diagnosis.App/Styles/TreeStyle.xaml
+++ b/Diagnosis.App/Styles/TreeStyle.xaml
@@ -4,8 +4,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:conv="clr-namespace:Diagnosis.App.Converters">
 
-    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
-    <SolidColorBrush x:Key="itemSelectedBrush" Color="#FFFF8A16" />
+    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />    
     <SolidColorBrush x:Key="itemSelectedNotActiveBrush"
                              Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}">
     </SolidColorBrush>
@@ -118,7 +117,7 @@
                 <Setter Property="Visibility" TargetName="Expander" Value="Hidden" />
             </Trigger>
             <Trigger Property="IsSelected" Value="true">
-                <Setter Property="Background" TargetName="Bd" Value="{StaticResource itemSelectedBrush}" />
+                <Setter Property="Background" TargetName="Bd" Value="{StaticResource treeItemSelectedBrush}" />
                 <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
             </Trigger>
             <MultiTrigger>
