--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -7,10 +7,7 @@
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="600">
     <!-- MenuBarVM -->
-    <Grid>
-        <Grid.Background>
-            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
-        </Grid.Background>
+    <Grid Background="{StaticResource mainMenuBackgroundBrush}">
         <Menu>
             <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все пациенты" />
             <!--<MenuItem Header="_Пациенты">
