ui. HrList items with borders, autocomplete items without heavy highlight
Replace all ListViews with ListBox. Apply ListBoxItem style from aero2.

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="Resources/ImageResources.xaml" />
                 <ResourceDictionary Source="Resources/ColorResources.xaml" />
                 <ResourceDictionary Source="Styles/SharedStyles.xaml" />
+                <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <s:Boolean x:Key="True">True</s:Boolean>
