--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -33,7 +33,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        
+
         <ToolBar>
             <Button Command="{Binding AddHealthRecordCommand}" ToolTip="Редактировать новую запись (Ctrl + N)">
                 <DockPanel>
@@ -63,17 +63,17 @@
             </Button>
         </ToolBar>
 
-        <ListView x:Name="records"
-                  Grid.Row="1"                  
+        <ListBox x:Name="records"
+                  Grid.Row="1"
                   ItemsSource="{Binding HealthRecords}"
                   IsSynchronizedWithCurrentItem="True"
                   SelectedItem="{Binding SelectedHealthRecord}"
-                  Style="{StaticResource list}"
+                  BorderThickness="0"
                   HorizontalContentAlignment="Stretch"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   SelectionMode="Extended"
                   SelectionChanged="records_SelectionChanged">
-            <ListView.GroupStyle>
+            <ListBox.GroupStyle>
                 <GroupStyle>
                     <GroupStyle.ContainerStyle>
                         <Style TargetType="GroupItem">
@@ -97,20 +97,20 @@
                         </Style>
                     </GroupStyle.ContainerStyle>
                 </GroupStyle>
-            </ListView.GroupStyle>
+            </ListBox.GroupStyle>
 
-            <ListView.ItemTemplate>
+            <ListBox.ItemTemplate>
                 <DataTemplate>
                     <card:HealthRecord Margin="0,0,0,5" />
                 </DataTemplate>
-            </ListView.ItemTemplate>
+            </ListBox.ItemTemplate>
 
-            <ListView.ItemContainerStyle>
-                <Style TargetType="{x:Type ListViewItem}">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                     <Setter Property="controls:Attached.InputBindings" Value="{StaticResource HRInputBindings}" />
                 </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
     </Grid>
 </UserControl>
