xaml. FullTree - common tree control
to use, specify DataContext with items, ItemContainerStyle and ItemTemplate
TreeStyle.xaml included in App.xaml

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="Resources/ImageResources.xaml" />
                 <ResourceDictionary Source="Resources/ColorResources.xaml" />
                 <ResourceDictionary Source="Styles/SharedStyles.xaml" />
+                <ResourceDictionary Source="Styles/TreeStyle.xaml" />
                 <ResourceDictionary Source="Styles/ListBoxItemAero2Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
