--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -26,6 +26,13 @@
                 <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
                 <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
             </InputBindingCollection>
+
+            <InputBindingCollection x:Shared="False" x:Key="CardElementsInputBindings">
+                <!--<KeyBinding Key="Space" Command="{Binding OpenCommand}" />-->
+                <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
+                <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
+            </InputBindingCollection>
+
             <InputBindingCollection x:Shared="False" x:Key="SearchResultInputBindings">
                 <KeyBinding Key="Space" Command="{Binding OpenCommand}" />
                 <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
