--- a/Diagnosis.App/Screens/Card3.xaml
+++ b/Diagnosis.App/Screens/Card3.xaml
@@ -6,7 +6,7 @@
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             xmlns:vm="clr-namespace:Diagnosis.ViewModels;assembly=Diagnosis.ViewModels"
+             xmlns:vm="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
              x:Name="card"
              mc:Ignorable="d"
              d:DataContext="{DynamicResource Context}"
