--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -7,7 +7,15 @@
     </Style>
     <Style TargetType="ComboBox">
         <Setter Property="Height" Value="23" />
-    </Style>    
+    </Style>
+    <Style TargetType="TextBlock">
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground"
+                        Value="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
     <!-- buttons -->
     <Style x:Key="DialogButtonsPanel" TargetType="{x:Type StackPanel}">
